Cleaning for production